--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -7,8 +7,8 @@ WORKDIR /root
 RUN apt-get update && \
     apt-get install -y wget vim rsync git tree tk build-essential pkg-config bash-completion r-base r-base-dev bc && \
     apt-get install -y libxml2-dev zlib1g-dev libudunits2-dev libgdal-dev libfontconfig1-dev libcairo2-dev libgsl-dev libv8-dev libmagick++-dev liblapack-dev libblas-dev && \
-    apt-get install -y python3-pip python3-dev && \
-    pip3 install notebook jupyterlab
+    apt-get install -y python3-pip python3-dev 
+#    && pip3 install notebook jupyterlab
 
 /bin/sh -c Rscript -e 'install.packages("corrgram", repos="https://cloud.r-project.org", lib="/ricopili/dependencies/R_packages")'
 /bin/sh -c Rscript -e 'install.packages("corrplot", repos="https://cloud.r-project.org", lib="/ricopili/dependencies/R_packages")'
