--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -7,10 +7,10 @@ WORKDIR /root
 RUN apt-get update && \
     apt-get install -y wget vim rsync git tree tk build-essential pkg-config bash-completion r-base r-base-dev bc && \
     apt-get install -y libxml2-dev zlib1g-dev libudunits2-dev libgdal-dev libfontconfig1-dev libcairo2-dev libgsl-dev libv8-dev libmagick++-dev liblapack-dev libblas-dev && \
+    apt-get install -y libharfbuzz-dev libfribidi-dev && \
     apt-get install -y python3-pip python3-dev && pip3 install --upgrade pip && \
     pip3 install notebook jupyterlab
 
-#RUN R -e "install.packages(c('digest', 'futile.logger','RJDBC', 'yaml', 'purrr','testthat','noctua'), dependencies = TRUE)"
 RUN R -e "install.packages(c('BiocManager', 'corrgram', 'corrplot', 'd3heatmap', 'data.table', 'DescTools', 'devtools', 'doBy', 'dplyr', 'extrafont', 'extrafontdb', 'foreign', 'forestplot', 'forestploter', 'gdata', 'ggcorrplot', 'ggplot2', 'gtools', 'haven', 'igraph', 'jpeg', 'lattice', 'lubridate', 'meta', 'metafor', 'mvoutlier', 'OpenMx', 'pheatmap', 'plyr', 'png', 'psych', 'qqman', 'randomForest', 'RColorBrewer', 'readxl', 'rJava', 'rmarkdown', 'rsq', 'scatterplot3d', 'scales', 'sem', 'semTools', 'stringr', 'sysfonts', 'systemfonts', 'tibble', 'tidyr', 'ukbtools', 'VennDiagram', 'viridis', 'viridisLite', 'vroom', 'writexl', 'WriteXLS', 'xlsx', 'xlsxjars', 'xtable'), repos='https://cloud.r-project.org', lib='/ricopili/dependencies/R_packages')"
 #Sys.unsetenv("GITHUB_PAT")
 RUN R -e "devtools::install_github('DudbridgeLab/avengeme')"
@@ -29,3 +29,5 @@ ENV PATH=/ricopili/dependencies/Minimac3:/ricopili/dependencies/bcftools:/ricopi
 
 EXPOSE 8888
 ENTRYPOINT ["jupyter", "lab", "--allow-root", "--ip=0.0.0.0", "--port=8888", "--no-browser"]
+
+# CMD ["/bin/bash"]
