--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -6,13 +6,14 @@ WORKDIR /root
 
 RUN apt-get update && \
     apt-get install -y wget vim rsync git tree tk build-essential pkg-config bash-completion bc sudo gpg && \
+    apt-get install -y libxml2-dev zlib1g-dev libudunits2-dev libgdal-dev libfontconfig1-dev libcairo2-dev libgsl-dev libv8-dev libmagick++-dev && \
+    apt-get install -y liblapack-dev libblas-dev libharfbuzz-dev libfribidi-dev && \
+    apt-get install -y python3-pip python3-dev && pip3 install --upgrade pip && \
+    pip3 install notebook jupyterlab
+
     #apt-get install -y --no-install-recommends r-base && \
     #apt-get install -y r-base r-base-core r-recommended r-base-dev && \
     #apt-get install -y --no-install-recommends r-base-core=4.1.2-1ubuntu2 r-base-html=4.1.2-1ubuntu2 r-doc-html=4.1.2-1ubuntu2 r-base-dev=4.1.2-1ubuntu2 && \
-    apt-get install -y libxml2-dev zlib1g-dev libudunits2-dev libgdal-dev libfontconfig1-dev libcairo2-dev libgsl-dev libv8-dev libmagick++-dev liblapack-dev libblas-dev && \
-    apt-get install -y libharfbuzz-dev libfribidi-dev && \
-    apt-get install -y python3-pip python3-dev && pip3 install --upgrade pip && \
-    pip3 install notebook jupyterlab
 
 #'mvoutlier', 'qqman', 'rJava', 'rsq', 'xlsx', 'xlsxjars', 
 
