--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /root
 RUN apt-get update && \
     apt-get install -y wget vim rsync git tree tk build-essential pkg-config bash-completion bc sudo gpg && \
     which pkg-config && \
+    ls $PKG_CONFIG_PATH && \
     apt-get install -y libxml2-dev zlib1g-dev libudunits2-dev libgdal-dev libfontconfig1-dev libcairo2-dev libgsl-dev libv8-dev libmagick++-dev && \
     apt-get install -y liblapack-dev libblas-dev libharfbuzz-dev libfribidi-dev && \
     apt-get install -y python3-pip python3-dev && pip3 install --upgrade pip && \
@@ -16,7 +17,7 @@ RUN apt-get update && \
     #apt-get install -y r-base r-base-core r-recommended r-base-dev && \
     #apt-get install -y --no-install-recommends r-base-core=4.1.2-1ubuntu2 r-base-html=4.1.2-1ubuntu2 r-doc-html=4.1.2-1ubuntu2 r-base-dev=4.1.2-1ubuntu2 && \
 
-ENV PKG_CONFIG_PATH /usr/bin
+#ENV PKG_CONFIG_PATH /usr/bin
 ENV PATH=/usr/bin:/ricopili/dependencies/Minimac3:/ricopili/dependencies/bcftools:/ricopili/dependencies/bgzip:/ricopili/dependencies/eagle:/ricopili/dependencies/eigensoft/EIG-6.1.4/bin:/ricopili/dependencies/impute_v2:/ricopili/dependencies/impute_v4:/ricopili/dependencies/latex:/ricopili/dependencies/ldsc:/ricopili/dependencies/liftover:/ricopili/dependencies/metal:/ricopili/dependencies/shapeit:/ricopili/dependencies/shapeit3:/ricopili/dependencies/tabix:$PATH
 
 FROM rocker/rstudio:4.0.0
